# radfu

./: .clang-format  .editorconfig  CONTRIBUTING.md  HARDWARE.md  LEGAL.md  README.md  install.sh  meson.build  meson.options  radfu.h2m  radfu.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dco.yml  packages.yml  wiki.yml
debian/: changelog  control  copyright
scripts/: generate-wiki.sh  scan-commands.sh  test-hw.sh
src/: compat.c  compat.h  formats.c  formats.h  getopt.c  getopt.h  main.c  port_linux.c  port_macos.c  port_windows.c  progress.c  progress.h  raconnect.c  raconnect.h  raconnect_windows.c  radfu.c  radfu.h  radfu_internal.h  raosis.c  raosis.h  rapacker.c  rapacker.h
tests/: test_formats.c  test_protocol.c  test_radfu.c  test_raosis.c  test_rapacker.c
tests/mock/: ramock.c  ramock.h
